tests/NormalTests/paczka1/fuzzy1/19156275.err
Error in line 3: SxhWqS4UA6 A304 22,0
Error in line 20: eyT8R A452 8,8
Error in line 24: zHs8km A452 48,1
Error in line 33: lkYu5GncZ S176 56,0
Error in line 39: 9Xj A304 28,7
